# Lictor-AI

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  IMPACT.md  LAUNCH-SPRINT-PLAYBOOK.md  LICENSE  LICTOR-SUBMISSION-RULES.md  Makefile  NOTICE  PRIORITY-QUEUE.md  README.md  ROADMAP.md  SECURITY.md  SETUP.md  STATUS-2026-05-26-OVERNIGHT.md  SUBMISSION-VERIFICATION-PROTOCOL.md  SUPPORT.md  WEBSITE-AUDIT.md  package-lock.json  package.json
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug.md  false-negative.md  false-positive.md  feature-request.md  pattern-request.md  voice-bug.md
.github/workflows/: ci.yml  guard-private-code.yml  release.yml
airlock/: README.md  package-lock.json  package.json
airlock/src/: actions.ts  agent-id.ts  broker.ts  cli.ts  fingerprint.ts  index.ts  redact.ts  telemetry.ts  types.ts  version.ts
airlock/tests/: broker.test.ts  destructive.test.ts  redact.test.ts  telemetry.test.ts
brand/: README.md
canary/: lictor-ssrf-canary.py
cli/: Cargo.toml  README.md
cli/src/: main.rs
core/: Cargo.toml  README.md
core/examples/: audit.rs
core/src/: finding.rs  http.rs  lib.rs  report.rs  wasm.rs
core/src/checks/: ai_agent.rs  auth.rs  cors.rs  database.rs  hallucinated_packages.rs  mod.rs  secrets.rs  webhooks.rs
disclosures/2026-05-17/: 01-anthropic-mcp-servers.md  02-punkpeye-mcp-servers.md  DRAFTS-LIBRARY.md  SUBMIT-CHECKLIST.md
docs/: BUG_BASH.md  README.md  compliance.md  openclaw-migration.md
docs/business/: ai-sandbox-business-model.md  lictor-pentest-blueprint.md
docs/design-system/: README.md
docs/launch/: EOD-2026-05-17.md  README.md  acquirer-deck-template.md  airbnb-cors-admin-2026-05-20.md  airbnb-hoteltonight-fastly-takeover-2026-05-20.md  anti-snyk-free-tier-playbook.md  atlassian-cors-2026-05-20.md  audit-json-adoption-outreach.md  audit-our-own-audit-protocol.md  blablacar-cors-2026-05-20.md  blog-7-patterns.md  blog-cornerstone-when-competitor-ships-free.md  blog-post.md  blog-self-teardown-aug-2026.md  blog-tonight-we-scanned-github-2026-05-20.md  blog-why-i-built-lictor.md  booking-fareharbor-sourcemap-2026-05-20.md  bounty-queue-2026-05-19.md  cashapp-cors-2026-05-20.md  cashapp-takeover-1-2026-05-20.md  cashapp-takeover-2-2026-05-20.md  content-calendar.md  course-5-day-email-sequence.md  course-curriculum-2027.md  course-email.md  deriv-oidc-cors-2026-05-20.md  design-partner-outreach.md  disclosure-emails-sep-22.md  disclosures-2026-05-17.md  elastic-cors-auth-2026-05-20.md  elastic-docs-staging-vercel-takeover-2026-05-20.md  expedia-carrentals-gcp-bucket-2026-05-20.md  expedia-multi-bucket-disclosure-2026-05-20.md  expedia-sourcemap-2026-05-20.md  fanduel-graphql-introspection-2026-05-20.md  floqast-takeover-2026-05-20.md  founder-content-templates.md  frontegg-au-cors-2026-05-20.md  github-co-il-inventory.md  github-co-il-inventory.tsv  (+87 more)
docs/ops/: isp-response.md
docs/specs/: guardian-schema.md  multi-tenant-plan.md  sentinel-api.md  wire-format.md
docs/sprints/: ROADMAP.md  s22-plan.md
docs/standards/: AUDIT.json.md  AUDIT.schema.json
domain-guard/: README.md
examples/: README.md
examples/vulnerable-demo/: README.md  index.html
functions/_lib/: scan-core.mjs
functions/api/: waitlist.js
guardian/: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  next.config.js  package.json  pnpm-lock.yaml  tsconfig.json
guardian/migrations/: 0001_initial.sql  0002_slack_webhook_stripe.sql
guardian/scripts/: migrate.mjs  seed.mjs
guardian/tests/: integration.test.ts
isolation/: Dockerfile  README.md  redzone-entrypoint.sh  run-redzone.sh
isolation/usb-os/: README.md  build-iso.sh
landing/: README.md  _headers  _redirects  business.html  codex.css  coming-soon.html  index.html  robots.txt  scan-policy.html  security.css  sitemap.xml  style.css
landing/.well-known/: security.txt
landing/changelog/: changelog.js  index.html
landing/compliance/: compliance.css  index.html
launchd/: ai.lictor.globe-patrol.plist  ai.lictor.il-patrol.plist  ai.lictor.monthly-metrics.plist
output/: globe.html  impact.json  patrol-aggregate.jsonl
scripts/: README.md  auto-fp-cycle.py  bounty-hunt.py  bounty-hunter.py  bounty-matcher.py  build-bounty-corpus.py  build-contract-corpus.py  build-expanded-corpus.py  build-il-master.py  cf-stats-fetch.py  correlate-by-pattern.py  decision-gate.py  dedupe-against-prior.py  deep-dive.py  deep-verify-all-now.py  deep-verify-pool.py  deep-verify-queue.py  disclose-priority.py  disclosure-log.py  drain-queue.py  email-monitor.py  enrich-il-corpus.py  expand-il-inventory.py  fetch-buttondown-stats.py  filter-optout.py  filter-wildcard-hosts.py  find-contact.py  generate-dep-confusion-disclosures.py  generate-misc-disclosures.py  generate-monthly-metrics.py  gentle-patrol.sh  globe-aggregate.py  globe-patrol.py  il-campaign-9h.sh  il-daily-patrol.sh  il-deep-recon.sh  il-sector-gap-2h.sh  impact-stats.py  install.sh  lan-pentest.py  (+129 more)
sentinel/: README.md  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json
sentinel-py/: .gitignore  README.md  pyproject.toml
sentinel-py/src/lictor_sentinel/: __init__.py  agent_id.py  check_runner.py  extractors.py  fingerprint.py  telemetry.py  types.py  wrap.py
sentinel-py/src/lictor_sentinel/checks/: __init__.py  pii_leak.py  prompt_injection.py  secrets_in_input.py
sentinel-py/tests/: test_wrap.py
shield/: .gitignore  README.md  build.mjs  manifest.json  package.json  pnpm-lock.yaml  tsconfig.json
shield/src/: types.ts  (+3 more)
skills/: README.md  install-cursor.sh  install.sh  plugin.json
studio/: .gitignore  README.md  index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
studio/src-tauri/: Cargo.toml  tauri.conf.json
studio/src-tauri/icons/: icon.icns
studio/src-tauri/src/: audit.rs  commands.rs  main.rs
v3/: .gitignore  AGENTS.md  QUICKSTART.md  README.md  USER.md  openclaw.config.json
vscode-extension/: .vscodeignore  README.md  package.json  pnpm-lock.yaml  tsconfig.json
(+320 files in other folders)
