[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "lictor-sentinel"
version = "0.1.0a0"
description = "Lictor Sentinel — wraps OpenAI / Anthropic Python SDKs to block prompt injection, data exfiltration, and unsafe AI behaviour."
readme = "README.md"
requires-python = ">=3.10"
license = "Apache-2.0"
authors = [{ name = "Lictor AI" }]
keywords = [
  "ai-security",
  "prompt-injection",
  "openai",
  "anthropic",
  "guardrails",
  "llm-security",
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: Apache Software License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Security",
]
dependencies = []

[project.urls]
Homepage = "https://lictor-ai.com"
Repository = "https://github.com/Raffa-jarrl/Lictor-AI"
Documentation = "https://lictor-ai.com/docs"

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "ruff>=0.6",
  "mypy>=1.10",
]

[tool.hatch.build.targets.wheel]
packages = ["src/lictor_sentinel"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "RUF"]

[tool.mypy]
python_version = "3.10"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v"
