[package]
name = "lictor-studio"
version = "0.1.0-pre.0"
description = "Lictor Studio — offline desktop AI security audit"
authors = ["Lictor AI <hello@lictor-ai.com>"]
license = "Apache-2.0"
repository = "https://github.com/Raffa-jarrl/Lictor-AI"
edition = "2021"
rust-version = "1.79"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "lictor-studio"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2.6", features = [] }

[dependencies]
tauri = { version = "2.1", features = ["protocol-asset"] }
tauri-plugin-dialog = "2.0"
tauri-plugin-fs = "2.0"
tauri-plugin-shell = "2.0"
tauri-plugin-updater = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1.0"

lictor-core = { path = "../../core", default-features = false, features = ["native"] }
walkdir = "2.5"

[features]
# this feature is used for production builds or when `devUrl` points to the
# filesystem and disables specific features tailored for development.
custom-protocol = ["tauri/custom-protocol"]
